--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -15,14 +20,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <activity android:name=".ui.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DrawerActivity" />
+        <activity android:name=".ui.DrawerActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,7 +41,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".ui.MapsActivity"
             android:label="@string/title_activity_maps" >
             <intent-filter>
                 <action android:name="com.food4thought.map" />
@@ -46,7 +51,7 @@
         </activity>
 
         <activity
-            android:name=".SearchActivity"
+            android:name=".ui.SearchActivity"
             android:label="@string/title_activity_search" >
             <intent-filter>
                 <action android:name="com.food4thought.search" />
@@ -56,7 +61,7 @@
         </activity>
 
         <activity
-            android:name=".FavouritesActivity"
+            android:name=".ui.FavouritesActivity"
             android:label="@string/title_activity_favourite" >
             <intent-filter>
                 <action android:name="com.food4thought.favourites" />
@@ -66,7 +71,7 @@
         </activity>
 
         <activity
-            android:name=".CategoryActivity"
+            android:name=".ui.CategoryActivity"
             android:label="@string/title_activity_categories">
             <intent-filter>
                 <action android:name="com.food4thought.category" />
