--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,8 @@
         </activity>
         <activity
             android:name=".ui.RestaurantViewActivity"
+            android:launchMode="singleInstance"
+            android:noHistory="true"
             android:label="@string/title_activity_restaurant">
             <intent-filter>
                 <action android:name="com.food4thought.RestaurantViewActivity" />
