--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,15 +78,14 @@
         </activity>
         <activity
             android:name=".ui.RestaurantViewActivity"
+            android:label="@string/title_activity_restaurant"
             android:launchMode="singleInstance"
-            android:noHistory="true"
-            android:label="@string/title_activity_restaurant">
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="com.food4thought.RestaurantViewActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
         </activity>
     </application>
 
